Created stages, dimension, facts, intermediate and tests

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -44,3 +44,8 @@ models:
       intermediate:
         +materialized: view
         +schema: intermediate
+    
+    staging:
+      +schema: staging
+      erp:
+        +materialized: view
